--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "@types/jest": "^23.3.0",
     "@types/rdf-data-model": "^1.0.1",
     "@types/rdf-js": "^1.0.1",
+    "@rdfjs/data-model": "^1.1.0",
     "coveralls": "^3.0.0",
     "jest": "^23.4.1",
     "pre-commit": "^1.2.2",
-    "rdf-data-model": "^1.0.0",
     "ts-jest": "^23.0.1",
     "tslint": "^5.8.0",
     "tslint-eslint-rules": "^5.3.1",
@@ -69,6 +69,6 @@
     "prepare": "npm run build"
   },
   "dependencies": {
-    "rdf-string": "^1.1.1"
+    "rdf-string": "^1.2.0"
   }
 }
