--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/node": "^10.9.4",
     "coveralls": "^3.0.0",
     "jest": "^23.4.1",
+    "manual-git-changelog": "^1.0.0",
     "pre-commit": "^1.2.2",
     "ts-jest": "^23.0.1",
     "tslint": "^5.8.0",
@@ -64,7 +65,8 @@
     "lint": "tslint index.ts lib/**/*.ts test/**/*.ts --exclude '**/*.d.ts'",
     "build": "tsc",
     "validate": "npm ls",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "version": "manual-git-changelog onversion"
   },
   "dependencies": {
     "rdf-isomorphic": "^1.1.0",
