--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
     "test"
   ],
   "devDependencies": {
-    "@rdfjs/data-model": "^1.1.2",
     "@types/jest": "^26.0.0",
     "@types/node": "^13.1.0",
     "@types/rdf-dataset-indexed": "^0.4.3",
-    "@types/rdf-js": "^3.0.0",
+    "@types/rdf-js": "^4.0.0",
     "coveralls": "^3.0.0",
     "jest": "^26.0.0",
     "manual-git-changelog": "^1.0.0",
     "pre-commit": "^1.2.2",
+    "rdf-data-factory": "^1.0.1",
     "rdf-dataset-indexed": "^0.4.0",
     "ts-jest": "^26.0.0",
     "tslint": "^6.0.0",
@@ -74,6 +74,9 @@
   },
   "dependencies": {
     "rdf-isomorphic": "^1.1.0",
-    "rdf-string": "^1.3.1"
+    "rdf-string": "^1.5.0"
+  },
+  "resolutions": {
+    "@types/rdf-js": "^4.0.0"
   }
 }
