--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jest-rdf",
-  "version": "1.5.0",
+  "version": "1.6.0",
   "description": "Jest utilities for RDF(JS)",
   "keywords": [
     "jest",
@@ -48,7 +48,9 @@
     "typescript": "^3.0.1"
   },
   "jest": {
-    "setupFilesAfterEnv": [ "./index.js" ],
+    "setupFilesAfterEnv": [
+      "./index.js"
+    ],
     "transform": {
       "^.+\\.ts$": "ts-jest"
     },
