--- a/package.json
+++ b/package.json
@@ -35,17 +35,16 @@
     "@types/jest": "^26.0.0",
     "@types/node": "^13.1.0",
     "@types/rdf-dataset-indexed": "^0.4.3",
-    "@types/rdf-js": "^4.0.0",
     "coveralls": "^3.0.0",
     "jest": "^26.0.0",
     "manual-git-changelog": "^1.0.0",
     "pre-commit": "^1.2.2",
-    "rdf-data-factory": "^1.0.1",
+    "rdf-data-factory": "^1.1.0",
     "rdf-dataset-indexed": "^0.4.0",
     "ts-jest": "^26.0.0",
     "tslint": "^6.0.0",
     "tslint-eslint-rules": "^5.3.1",
-    "typescript": "^3.0.1"
+    "typescript": "^4.3.5"
   },
   "jest": {
     "setupFilesAfterEnv": [
@@ -75,10 +74,8 @@
     "version": "manual-git-changelog onversion"
   },
   "dependencies": {
-    "rdf-isomorphic": "^1.2.0",
-    "rdf-string": "^1.5.0"
-  },
-  "resolutions": {
-    "@types/rdf-js": "^4.0.0"
+    "@rdfjs/types": "*",
+    "rdf-isomorphic": "^1.3.0",
+    "rdf-string": "^1.6.0"
   }
 }
