--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "pre-commit": "^1.2.2",
     "rdf-data-factory": "^1.1.0",
     "rdf-dataset-indexed": "^0.4.0",
-    "rdf-terms": "^1.9.1",
     "ts-jest": "^26.0.0",
     "tslint": "^6.0.0",
     "tslint-eslint-rules": "^5.3.1",
@@ -79,6 +78,7 @@
   "dependencies": {
     "@rdfjs/types": "*",
     "rdf-isomorphic": "^1.3.0",
-    "rdf-string": "^1.6.0"
+    "rdf-string": "^1.6.0",
+    "rdf-terms": "^1.9.1"
   }
 }
