--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   "dependencies": {
     "@rdfjs/types": "*",
     "rdf-isomorphic": "^1.3.0",
-    "rdf-string": "^1.6.0"
+    "rdf-string": "^1.6.0",
+    "rdf-terms": "^1.9.1"
   }
 }
