--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "typings": "index",
   "repository": "git@github.com:rubensworks/jest-rdf.git",
   "author": "Ruben Taelman <rubensworks@gmail.com>",
+  "funding": {
+    "type": "individual",
+    "url": "https://github.com/sponsors/rubensworks/"
+  },
   "bugs": {
     "url": "https://github.com/rubensworks/jest-rdf/issues"
   },
