--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "ts-jest": "^26.0.0",
     "tslint": "^6.0.0",
     "tslint-eslint-rules": "^5.3.1",
-    "typescript": "^5.0.0"
+    "typescript": "^5.7.2"
   },
   "jest": {
     "setupFilesAfterEnv": [
@@ -80,9 +80,9 @@
     "version": "manual-git-changelog onversion"
   },
   "dependencies": {
-    "@rdfjs/types": "*",
-    "rdf-isomorphic": "^1.3.0",
-    "rdf-string": "^1.6.0",
-    "rdf-terms": "^1.9.1"
-  }
+    "rdf-isomorphic": "^2.0.0",
+    "rdf-string": "^2.0.0",
+    "rdf-terms": "^2.0.0"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
